@@ -10,6 +10,7 @@
 	  z coordinates.
 	* paths.cc: Fixed a few incorrect results for grabbing objects through walls
 	  re-introduced in commit #7224.
+	* paths.cc: Fixed incorrect blocked objects from commits #7224-#7225.
 
 2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* usecode/*: Fixed longstanding bug in usecode symbol table. Also fixed bug
